# ChangeLog for dev-java/commons-collections
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/commons-collections/ChangeLog,v 1.55 2010/01/03 20:23:30 fauli Exp $

  03 Jan 2010; Christian Faulhammer <fauli@gentoo.org>
  commons-collections-3.2.1.ebuild:
  Transfer Prefix keywords

  20 Dec 2008; Markus Meier <maekke@gentoo.org>
  commons-collections-3.2.1.ebuild:
  x86 stable, bug #242966

  27 Oct 2008; Brent Baude <ranger@gentoo.org>
  commons-collections-3.2.1.ebuild:
  stable ppc64, bug 242966

  25 Oct 2008; nixnut <nixnut@gentoo.org> commons-collections-3.2.1.ebuild:
  Stable on ppc wrt bug 242966

  21 Oct 2008; Kenneth Prugh <ken69267@gentoo.org>
  commons-collections-3.2.1.ebuild:
  amd64 stable, bug #242966

  21 Oct 2008; Miroslav Šulc <fordfrog@gentoo.org>
  commons-collections-3.2.1.ebuild:
  Fixed installation of commons-collections-testframework jar

  23 Jun 2008; Alistair Bush <ali_bush@gentoo.org>
  commons-collections-3.2-r1.ebuild, commons-collections-3.2.1.ebuild:
  Update urls as upstream forwards have been removed.

*commons-collections-3.2.1 (21 Jun 2008)

  21 Jun 2008; Miroslav Šulc <fordfrog@gentoo.org>
  +commons-collections-3.2.1.ebuild:
  version bump

  13 Apr 2008; Petteri Räty <betelgeuse@gentoo.org>
  -commons-collections-3.2.ebuild:
  Remove old revision.

  09 Dec 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  Disable src_test on ppc.

  25 Nov 2007; Krzysiek Pawlik <nelchael@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  Stable on ppc, bug #198993.

  18 Nov 2007; Markus Rothe <corsair@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  Stable on ppc64; bug #198993

  17 Nov 2007; William L. Thomson Jr. <wltjr@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  amd64 stable, bug #198993.

  13 Nov 2007; Christian Faulhammer <opfer@gentoo.org>
  commons-collections-3.2-r1.ebuild:
  stable x86, bug 198993
